<resources>
    <string name="app_name">Expense App</string>
    <string name="if_register">Если вы уже зарегестрированы</string>
    <string name="login">Войти</string>
    <string name="if_not_register">Если у вас еще нет аккаунта</string>
    <string name="register">Зарегистрироваться</string>
    <string name="login_text">Логин</string>
    <string name="password">Пароль</string>
    <string name="name">Ваше имя</string>
    <string name="lastname">Ваша фамилия</string>
    <string name="not_correct_password">Неверный пароль</string>
    <string name="password_again">Подтвердить пароль</string>
    <string name="not_match">Пароли не совпадают</string>
    <string name="edit_prpofile">Изменить профиль</string>
    <string name="add_ex">Добавить расход</string>
    <string name="enter_ex_name">Введит заголовок</string>
    <string name="enter_sum">Введите сумму</string>
    <string name="all_ex">Все расходы</string>
</resources>